# xsearchlane

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
demo/: captions.srt  gen-architecture.py  gen-frames.py  make-video.sh  script.md
docs/: MCP.md  STACKLANE_PATCH.md
examples/: opencode.json
python/: README.md  pyproject.toml
python/xsearchlane/: __init__.py  __main__.py  client.py
src/: cli.ts  client.ts  config.ts  engine.ts  errors.ts  index.ts  types.ts
src/mcp/: server.ts
src/providers/: mock.ts  talocode.ts  xai.ts
tests/: engine.test.ts
